# SorryQt

./: .gitignore  .gitmodules  Board.qml  CMakeLists.txt  Card.qml  Main.qml  Piece.qml  PlayerPanel.qml  README.md  Slide.qml  main.cpp  sorry_backend.cpp  sorry_backend.h
agent/base/: CMakeLists.txt  baseAgent.hpp
agent/mcts/: CMakeLists.txt  Makefile  README.md  main.cpp  sorryMcts.cpp  sorryMcts.hpp
agent/rl/: .gitignore  CMakeLists.txt  README.md  actionMap.cpp  actionMap.hpp  actorCriticTrainingUtil.cpp  actorCriticTrainingUtil.hpp  actor_critic.py  common.cpp  common.hpp  jaxModel.cpp  jaxModel.hpp  jaxModule.py  jaxTrajectory.cpp  jaxTrajectory.hpp  main.cpp  my_jax.py  notes.md  reinforceAgent.cpp  reinforceAgent.hpp  reinforceWithBaselineTrainingUtil.cpp  reinforceWithBaselineTrainingUtil.hpp  reinforce_with_baseline.py  syntaxTest.cpp  train.cpp  trainingUtil.cpp  trainingUtil.hpp  trajectory.cpp  trajectory.hpp
agent/rl/checkpoints/a2c/policy_optimizer/: _sharding  manifest.ocdbt
agent/rl/checkpoints/a2c/policy_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/a2c/value/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/a2c/value_optimizer/: _CHECKPOINT_METADATA  _METADATA
agent/rl/checkpoints/a2c/value_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic/policy/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic/policy_optimizer/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic/policy_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic/value/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic/value/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic/value_optimizer/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic/value_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/policy/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/policy_optimizer/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/policy_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/value/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/value/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/value_optimizer/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic_7_opponents/value_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_better_reward/policy/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic_better_reward/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/actor_critic_better_reward/policy_optimizer/: _CHECKPOINT_METADATA
agent/rl/checkpoints/actor_critic_better_reward/value/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/actor_critic_better_reward/value_optimizer/: _sharding  manifest.ocdbt
agent/rl/checkpoints/latest/: manifest.ocdbt
agent/rl/checkpoints/latest/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_1p_any/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_1p_any/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/policy/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/policy_optimizer/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/policy_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/value/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/value/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/value_optimizer/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_smaller_model_1p/value_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/policy/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/policy_optimizer/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/policy_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value.orbax-checkpoint-tmp-459/: _CHECKPOINT_METADATA
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value.orbax-checkpoint-tmp-459/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value_optimizer/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
agent/rl/checkpoints/reinforce_wb_1v1_selfplay/value_optimizer/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wbaseline_1p/policy/: _CHECKPOINT_METADATA  manifest.ocdbt
agent/rl/checkpoints/reinforce_wbaseline_1p/policy/ocdbt.process_0/: manifest.ocdbt
agent/rl/checkpoints/reinforce_wbaseline_1p/value/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
agent/rl/checkpoints/single_reinforce/: _CHECKPOINT_METADATA
arena/: CMakeLists.txt  arena.cpp
common/: CMakeLists.txt  common.cpp  common.hpp
engine/: CMakeLists.txt  README.md  action.cpp  action.hpp  card.cpp  card.hpp  common.cpp  common.hpp  deck.cpp  deck.hpp  playerColor.cpp  playerColor.hpp  sorry.cpp  sorry.hpp
ui/: CMakeLists.txt  Card.qml  Main.qml  Piece.qml  PlayerPanel.qml  README.md  main.cpp  sorry_backend.cpp  sorry_backend.h
(+6 files in other folders)
